--- a/ArkManagerApp/MainWindow.xaml
+++ b/ArkManagerApp/MainWindow.xaml
@@ -6,10 +6,23 @@
         xmlns:local="clr-namespace:ArkManagerApp"
         xmlns:MyNamespace="clr-namespace:ArkManager;assembly=ArkManager"
         mc:Ignorable="d"
-        Title="Ark Manager" Height="300" Width="550">
+        Title="Ark Manager" Height="400" Width="550">
     <Grid x:Name="MainGrid">
-        <Label Content="Select a blueprint" HorizontalAlignment="Left" Margin="5,10,0,0" VerticalAlignment="Top" Width="140" Padding="0"/>
-        <ComboBox x:Name="ComboBoxOfBlueprints" IsEditable="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Margin="5,30,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="463*"/>
+            <ColumnDefinition Width="81*"/>
+        </Grid.ColumnDefinitions>
+        <TabControl HorizontalAlignment="Left" Height="371" Margin="-1,-1,0,0" VerticalAlignment="Top" Width="543" Grid.ColumnSpan="2">
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5"/>
+            </TabItem>
+            <TabItem Header="TabItem">
+                <Grid x:Name="BlueprintCreationGrid" Background="White" Height="auto" Margin="0,0,-0.333,-5.333">
+                    <ComboBox x:Name="ComboBoxOfBlueprints" IsEditable="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged"/>
+                    <Label Content="Select a blueprint" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Width="140" Padding="0"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
 
     </Grid>
 </Window>
