--- a/ArkManagerApp/MainWindow.xaml
+++ b/ArkManagerApp/MainWindow.xaml
@@ -15,21 +15,18 @@
         <TabControl HorizontalAlignment="Left" Height="371" Margin="-1,-1,0,0" VerticalAlignment="Top" Width="543" Grid.ColumnSpan="2">
             <TabItem Header="My BP's">
                 <Grid x:Name="MyBlueprintsGrid">
-                    <Label Content="Search your blueprints" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top"/>
-
+                    <Label Content="Search your blueprints" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Padding="0"/>
+                    <ComboBox x:Name="MyBlueprintsComboBox" IsEditable="True" VerticalAlignment="Top" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged" HorizontalAlignment="Left" Width="140"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Create">
                 <Grid x:Name="CreateBlueprintGrid" Background="White" Height="auto" Margin="0,0,-0.333,-5.333">
 
                     <Label Content="Select a blueprint" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Width="140" Padding="0"/>
-
+                    <ComboBox x:Name="CreateBlueprintComboBox" IsEditable="True" VerticalAlignment="Top" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged" HorizontalAlignment="Left" Width="140"/>
                 </Grid>
             </TabItem>
         </TabControl>
-
-        <ComboBox x:Name="ComboBoxOfBlueprints" IsEditable="True" VerticalAlignment="Top" Margin="10,51,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged" HorizontalAlignment="Left" Width="140"/>
-
     </Grid>
 
 </Window>
