--- a/ArkManagerApp/MainWindow.xaml
+++ b/ArkManagerApp/MainWindow.xaml
@@ -8,21 +8,21 @@
         mc:Ignorable="d"
         Title="Ark Manager" Height="400" Width="550">
     <Grid x:Name="MainGrid">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="463*"/>
-            <ColumnDefinition Width="81*"/>
-        </Grid.ColumnDefinitions>
         <TabControl HorizontalAlignment="Left" Height="371" Margin="-1,-1,0,0" VerticalAlignment="Top" Width="543" Grid.ColumnSpan="2">
-            <TabItem Header="TabItem">
-                <Grid Background="#FFE5E5E5"/>
+            <TabItem Header="My BP's">
+                <Grid x:Name="MyBlueprintsGrid">
+                    <Label Content="Search your blueprints" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Padding="0"/>
+                    <ComboBox x:Name="MyBlueprintsComboBox" IsEditable="True" VerticalAlignment="Top" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged" HorizontalAlignment="Left" Width="140"/>
+                </Grid>
             </TabItem>
-            <TabItem Header="TabItem">
-                <Grid x:Name="BlueprintCreationGrid" Background="White" Height="auto" Margin="0,0,-0.333,-5.333">
-                    <ComboBox x:Name="ComboBoxOfBlueprints" IsEditable="True" HorizontalAlignment="Left" VerticalAlignment="Top" Width="140" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged"/>
+            <TabItem Header="Create">
+                <Grid x:Name="CreateBlueprintGrid" Background="White" Height="auto" Margin="0,0,-0.333,-5.333">
+
                     <Label Content="Select a blueprint" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Width="140" Padding="0"/>
+                    <ComboBox x:Name="CreateBlueprintComboBox" IsEditable="True" VerticalAlignment="Top" Margin="5,25,0,0" SelectionChanged="ComboBoxOfBlueprints_SelectionChanged" HorizontalAlignment="Left" Width="140"/>
                 </Grid>
             </TabItem>
         </TabControl>
-
     </Grid>
+
 </Window>
